# dynamics

./: .gitmodules  CMakeLists.txt
include/: controller.hpp  drone.hpp  dynamics.hpp  fixedwing.hpp  params.hpp  quat.hpp  types.hpp
include/dynamics/: drone.hpp  dynamics.hpp  fixedwing.hpp  input.hpp  params.hpp  types.hpp  winddynamics.hpp
src/: controller.cpp  drone.cpp  dynamics.cpp  dynamics_unittests.cpp  fixedwing.cpp  winddynamics.cpp
test/: dynamics_unittests.cpp
